Fixed section 3 row spacing. Added sections 7 and 8.

--- a/css/section-1.css
+++ b/css/section-1.css
@@ -1,98 +1,97 @@
 .home-header {
-    position: relative;
-    top: 0px;
-    text-align:center;
-    height: 100px;
-    margin-bottom: 40px;
-  }
+  position: relative;
+  top: 0px;
+  text-align:center;
+  height: 100px;
+  margin-bottom: 40px;
+}
   
-  .first-header-label {
-    float: right;
-    margin: 40px 20px 40px 20px;
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 18px;
-    color: #3b4f64;
-    vertical-align: middle;
-  
+.first-header-label {
+  float: right;
+  margin: 40px 20px 40px 20px;
+  font-family: 'Noto Sans', sans-serif;
+  font-size: 18px;
+  color: #3b4f64;
+  vertical-align: middle;
 }
   
 .help-button {
-    width: 222px;
-    height: 50px;
-    margin: 25px 20px 25px 20px;
-    border-radius: 3px;
-    background-color: #eb3343;
-    float: right;
-    color: white;
-    font-size: 18px;
-    vertical-align: middle;
-    margin: 30px;
+  width: 222px;
+  height: 50px;
+  margin: 25px 20px 25px 20px;
+  border-radius: 3px;
+  background-color: #eb3343;
+  float: right;
+  color: white;
+  font-size: 18px;
+  vertical-align: middle;
+  margin: 30px;
 }
 
 .section-1-main-container {
-    overflow: auto;
+  overflow: auto;
 }
 
 .section-1-left-container {
-    float: left;
-    width: 40%;
-    margin-left: 10%;
+  float: left;
+  width: 40%;
+  margin-left: 10%;
 }
 
 .section-1-hcma-heart-container {
-    height: 200px;
-    margin-bottom: 60px;
+  height: 200px;
+  margin-bottom: 60px;
 }
 
 .section-1-hcma-heart {
-    float: left;
-    /* display: inline; */
-    background-color: red;
-    height: 200px;
-    width:200px;
+  float: left;
+  /* display: inline; */
+  /* background-color: red; */
+  height: 200px;
+  width:200px;
 }
 
 .section-1-HCA {
-    /* float: left; */
-    /* display: inline; */
-    height: 200px;
-    width:200px;
+  /* float: left; */
+  /* display: inline; */
+  height: 200px;
+  width:200px;
 }
 
 .big-text-1 {
-    max-width: 844px;
+  max-width: 844px;
 }
 
 .small-text-1 {
-    max-width: 844px;
+  max-width: 844px;
 }
 
 .section-1-right-container {
-    float: right;
-    width: 45%;
-    margin-top: 7%;
-    /* margin-bottom: 25%; */
+  float: right;
+  width: 45%;
+  margin-top: 7%;
+  /* margin-bottom: 25%; */
 }
 .section-1-hearts-images {
-    /* width: 400px; */
-    /* height: auto; */
-    max-width: 400px; 
-    /* max-height: 600px;  */
+  /* width: 400px; */
+  /* height: auto; */
+  max-width: 400px; 
+  /* max-height: 600px;  */
 } 
 
 .learn-why-text {
-    width: 327px;
-    height: 86px;
-    margin-top: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 20px;
-    font-weight: bold;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.35;
-    letter-spacing: 1px;
-    text-align: center;
-    color: #3b4f64;
+  width: 327px;
+  height: 86px;
+  /* margin-top: 30px; */
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Noto Sans', sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.35;
+  letter-spacing: 1px;
+  text-align: center;
+  color: #3b4f64;
 }
