--- a/css/section-2.css
+++ b/css/section-2.css
@@ -11,7 +11,8 @@
 }
 
 .section-2-lottie-container {
-  height: 100%;
+  /* height: 100%; */
+  height: 90%;
   width: 50%;
   display: flex;
   justify-content: center;
@@ -25,7 +26,8 @@
 }
 
 #section-2-outer-text-container {
-  height: 100%;
+  /* height: 100%; */
+  height: 90%;
   width: 50%;
   display: flex;
   justify-content: center;
@@ -48,6 +50,6 @@
   transform: translateX(30px);
 }
 
-.learn-button {
+.section-2-learn-button {
   transform: translateX(30px);
 }
