--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,25 @@
   animation-fill-mode: forwards;
 }
 
-#section-2, #section-3, #section-4, #section-5, #section-6, #section-7, #section-8, #section-9, #section-10 {
+#section-2, 
+#section-3, 
+#section-4, 
+#section-5, 
+#section-6, 
+#section-7, 
+#section-8,
+#section-9, 
+#section-10,
+#section-11,
+#section-12,
+#section-13 {
   opacity: 0.0;
   animation-fill-mode: forwards;
 }
 
-#pp-nav {
+/* #pp-nav {
   display:none;
-}
+} */
 
 .background-container {
   /* position:fixed; */
@@ -76,6 +87,22 @@
   color: #3b4f64;
   background-color: transparent;
   border: 2px solid #3b4f64;
+}
+
+/* .down-arrow {
+  position: absolute;
+  bottom: 30px;
+  height: 20px;
+  width: 20px;
+  left: 50%;
+} */
+
+.arrow {
+  height: 20px;
+  width: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 .clockwise-rotation {
